# latincy-ner

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
assets/collections/bootstrap/: bootstrap-herodotos-dev.json  bootstrap-neral-dev.json  bootstrap-neral-train.json
assets/collections/catena/: catena-dcd.1.json  catena-dcd.1.json.orig  catena-dcd.2-dev.json  catena-dcd.2-train.json  catena-dcd.2.json
assets/collections/nt/: nt-matthew-dev.json  nt-matthew-test.json  nt-matthew-train.json  nt-matthew.json  nt-matthew.json.orig
assets/collections/ot/: ot-genesis-dev.json  ot-genesis.json
assets/collections/ovid-met/: ovid-met-1.json
assets/collections/primer/: primer-ritchies-datacard.md  primer-ritchies-dev.json  primer-ritchies-nel.json  primer-ritchies-train.json  primer-ritchies.json  primer-sonnenschein_1902-dev.json  primer-sonnenschein_1902.json  primer-sonnenschein_1903.json  primer-sonnenschein_1903.json.orig
assets/collections/tesserae/: tesserae-ovid.metamorphoses.1-dev.json  tesserae-ovid.metamorphoses.1-train.json
assets/collections/ud/: ud-dev.json  ud-train.json
assets/processed/: manifest.json
assets/processed/bio/: dev.tsv  test.tsv  train.tsv
assets/processed/json/: dev.json  test.json  train.json
assets/splits/bootstrap/: bootstrap-herodotos-train.json  (+1 more)
docs/: SINGLES_FORMAT.md
scripts/: build_training_data.py  ner2spacy.py  split_unsplit_singles.py  validate_single.py
tests/: test_augmentation.py  test_bio_export.py  test_validate_single.py
(+93 files in other folders)
