[project]
name = "latincy-ner"
version = "3.9.1"
description = "Curated NER training data and pipeline for LatinCy Latin language models"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.8.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
